Update to nfc 1.7.8 Update flutter version to 3.24.5 Updte Readme

--- a/SampleIntegrateNfcEkyc/.gitignore
+++ b/SampleIntegrateNfcEkyc/.gitignore
@@ -42,3 +42,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/nfc/vnpt_nfc_sdk-release-*.aar
+/android/scanqr/build
+/android/scanqr/scanqr_ic_sdk-release-*.aar
