--- a/SampleIntegrateNfcEkyc/android/app/build.gradle
+++ b/SampleIntegrateNfcEkyc/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace 'com.vnpt.ic.sample.integrate.nfc.sampleintegratenfcekyc'
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -77,16 +78,17 @@ dependencies {
 
     // NFC
     implementation project(':nfc')
+    implementation project(':scanqr')
     implementation 'org.jmrtd:jmrtd:0.7.24'
     implementation 'com.madgag.spongycastle:prov:1.58.0.0'
     implementation 'net.sf.scuba:scuba-sc-android:0.0.23'
     implementation group: 'org.ejbca.cvc', name: 'cert-cvc', version: '1.4.6'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.67'
     implementation 'commons-io:commons-io:2.6'
-    implementation 'com.gemalto.jp2:jp2-android:1.0.3'
+//    implementation 'com.gemalto.jp2:jp2-android:1.0.3'
     implementation 'com.github.mhshams:jnbis:2.0.2'
     implementation 'com.airbnb.android:lottie:6.0.1'
-    implementation "com.google.zxing:core:3.5.1"
+    implementation "me.dm7.barcodescanner:zxing:1.9.8"
     implementation "androidx.camera:camera-core:1.2.1"
     implementation "androidx.camera:camera-camera2:1.2.1"
     implementation "androidx.camera:camera-lifecycle:1.2.1"
