--- a/SampleIntegrateNfcEkyc/android/app/src/main/AndroidManifest.xml
+++ b/SampleIntegrateNfcEkyc/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
          </intent-filter>
       </activity>
+
+      <activity android:name=".NfcTransparentActivity" android:theme="@style/AppTheme.Transparent" />
       <!-- Don't delete the meta-data below.
            This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
       <meta-data
