--- a/SampleIntegrateNfcEkyc/android/settings.gradle
+++ b/SampleIntegrateNfcEkyc/android/settings.gradle
@@ -1,5 +1,6 @@
 include ':app'
 include ':nfc'
+include ':scanqr'
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
 def properties = new Properties()
